# complex-to-psql-tools

./: requirements.txt  setup.cfg  test-requirements.txt  tox.ini
complex_to_psql_tools/: create_table_fields.py  drop_invalid_dates.py  generate_date_fixer.py  rovat_to_psql.py
complex_to_psql_tools/tests/: test_create_table_fields.py  test_drop_invalid_dates.py  test_generate_date_fixer.py
