[metadata]
name = complex_to_psql_tools
version = 0.2.0
author = Krisztián Fekete
author-email = fekete.krisztyan@gmail.com
summary = Tools for fixing & help loading rovat_n.csvs to postgres
description-file = README
license = MIT

[entry_points]
console_scripts =
    generate-date-fixer = complex_to_psql_tools.generate_date_fixer:main
    drop-invalid-dates = complex_to_psql_tools.drop_invalid_dates:main
    create-table-fields = complex_to_psql_tools.create_table_fields:main
    rovat-to-psql = complex_to_psql_tools.rovat_to_psql:main
